--- a/index.html
+++ b/index.html
@@ -2,23 +2,31 @@
 <html lang="en"
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
     <title>Linked List</title>
   </head>
   <body>
+    <main>
 
     <section class= "app-title">
+      <div class= "title-div">
       <h1 class= "title"> Linked </h1>
       <img class= "logo" src="images/linked-list-logo.svg" alt="Linked List logo">
       <h1 class= "title"> List </h1>
+      </div>
       <section class="inputs">
       <input class="website-title" type="text" name="" placeholder="Website Title">
+      <span class="error-message" id="title-error">*Please enter a Title and URL*</span>
       <input class="website-URL" type="text" name="" placeholder="Website URL" >
       </section>
-      <button class="enter-button" type="button" name="button">Enter</button>
+      <button class="enter-button" disabled= 'true' type="button" name="button">Enter</button>
     </section>
-    <script src="main.js" charset="utf-8"></script>
+    <section class="card-display">
+      </section>
+      <main>
     <script src="bookmark.js" charset="utf-8"></script>
+    <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
